<?xml version="1.0"?>
<package>
    <name>cart_control</name>
    <version>0.1.0</version>
    <description>Cart Control with Serial Port</description>
    <maintainer email="longfei.zhao@yahoo.com">Longfei Zhao</maintainer>
    <author></author>
    <url type="repository">https://github.com/LongfeiProjects</url>
    <license>BSD</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roslaunch</build_depend>

    <export>
    </export>
</package>
